Fixed Cors verification